--- a/app/src/main/res/layout/fragment_node_info.xml
+++ b/app/src/main/res/layout/fragment_node_info.xml
@@ -7,7 +7,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Node Details"
+        android:text="@string/fragment_node_info_node_details"
         android:textStyle="bold"
         android:layout_margin="10dp"
         android:textColor="@color/primary_color"
@@ -34,7 +34,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Node Name"
+                android:text="@string/fragment_node_info_node_name"
                 android:textColor="@color/primary_color"
                 android:textSize="16sp" />
 
@@ -72,7 +72,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Unicast Address"
+                android:text="@string/fragment_node_info_unicast_address"
                 android:textColor="@color/primary_color"
                 android:textSize="16sp" />
 
@@ -111,7 +111,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="UUID"
+                android:text="@string/fragment_node_info_uuid"
                 android:textColor="@color/primary_color"
                 android:textSize="16sp" />
 
@@ -149,7 +149,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Network Name"
+                android:text="@string/fragment_node_info_network_name"
                 android:textColor="@color/primary_color"
                 android:textSize="16sp" />
 
@@ -188,7 +188,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Network Key"
+                android:text="@string/fragment_node_info_network_key"
                 android:textColor="@color/primary_color"
                 android:textSize="16sp" />
 
@@ -226,7 +226,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="App Key"
+                android:text="@string/fragment_node_info_app_key"
                 android:textColor="@color/primary_color"
                 android:textSize="16sp" />
 
@@ -263,7 +263,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Dev Key"
+                android:text="@string/fragment_node_info_dev_key"
                 android:textColor="@color/primary_color"
                 android:textSize="16sp" />
 
@@ -281,7 +281,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Model Table"
+        android:text="@string/fragment_node_info_model_table"
         android:textStyle="bold"
         android:layout_margin="10dp"
         android:textColor="@color/primary_color"
