--- a/app/src/main/res/layout/dialog_ota_process.xml
+++ b/app/src/main/res/layout/dialog_ota_process.xml
@@ -20,19 +20,19 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/otaprogress_header"
+                    android:id="@+id/tv_ota_progress_header"
                     android:layout_width="300dp"
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif-medium"
                     android:paddingStart="20dp"
                     android:paddingTop="20dp"
                     android:paddingEnd="0dp"
-                    android:text="OTA Progress"
+                    android:text="@string/dialog_ota_process_header"
                     android:textColor="@android:color/background_light"
                     android:textSize="16sp" />
 
                 <TextView
-                    android:id="@+id/device_address"
+                    android:id="@+id/tv_device_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif"
@@ -40,7 +40,7 @@
                     android:paddingTop="5dp"
                     android:paddingEnd="0dp"
                     android:paddingBottom="15dp"
-                    android:text="Device name"
+                    android:text="@string/dialog_ota_device_name"
                     android:textColor="@android:color/background_light"
                     android:textSize="14sp" />
             </LinearLayout>
@@ -57,17 +57,17 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/filetext"
+                    android:id="@+id/tv_file_name_title"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_margin="15dp"
                     android:layout_weight="0.35"
                     android:fontFamily="sans-serif-medium"
-                    android:text="File name:"
+                    android:text="@string/dialog_ota_process_file_name_colon"
                     android:textSize="14sp" />
 
                 <TextView
-                    android:id="@+id/filename"
+                    android:id="@+id/tv_file_name"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_margin="15dp"
@@ -83,17 +83,17 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/sizetext"
+                    android:id="@+id/tv_file_size_title"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_margin="15dp"
                     android:layout_weight="0.35"
                     android:fontFamily="sans-serif-medium"
-                    android:text="File size:"
+                    android:text="@string/dialog_ota_process_file_size_colon"
                     android:textSize="14sp" />
 
                 <TextView
-                    android:id="@+id/sizename"
+                    android:id="@+id/tv_file_size"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_margin="15dp"
@@ -109,18 +109,18 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/mtutext"
+                    android:id="@+id/tv_packet_size_title"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_margin="15dp"
                     android:layout_weight="0.35"
                     android:elegantTextHeight="true"
                     android:fontFamily="sans-serif-medium"
-                    android:text="Packet size:"
+                    android:text="@string/dialog_ota_process_packet_size_colon"
                     android:textSize="14sp" />
 
                 <TextView
-                    android:id="@+id/mtuname"
+                    android:id="@+id/tv_packet_size"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_margin="15dp"
@@ -136,7 +136,7 @@
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:id="@+id/otasteps"
+                    android:id="@+id/tv_ota_step"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="15dp"
@@ -147,11 +147,11 @@
                     android:text="" />
 
                 <TextView
-                    android:id="@+id/datarate"
+                    android:id="@+id/tv_data_rate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="5dp"
-                    android:layout_toEndOf="@id/otasteps"
+                    android:layout_toEndOf="@id/tv_ota_step"
                     android:gravity="end"
                     android:layout_marginEnd="5dp"
                     android:elegantTextHeight="true"
@@ -159,24 +159,24 @@
                     android:paddingTop="5dp"
                     android:paddingBottom="5dp"
                     android:maxLength="13"
-                    android:layout_alignEnd="@id/otaprogress"
+                    android:layout_alignEnd="@id/progress_bar_ota_progress"
                     android:text=""
                     android:textSize="14sp" />
 
                 <ProgressBar
-                    android:id="@+id/connecting_spinner"
+                    android:id="@+id/spinner_connecting"
                     android:layout_width="25dp"
                     android:layout_height="25dp"
                     android:layout_margin="5dp"
-                    android:layout_above="@id/datasize"
-                    android:layout_alignStart="@id/datasize"
-                    android:layout_alignEnd="@id/datasize"
+                    android:layout_above="@id/tv_data_size"
+                    android:layout_alignStart="@id/tv_data_size"
+                    android:layout_alignEnd="@id/tv_data_size"
                     android:indeterminate="true"
                     android:visibility="invisible" />
 
 
                 <ProgressBar
-                    android:id="@+id/otaprogress"
+                    android:id="@+id/progress_bar_ota_progress"
                     style="?android:attr/progressBarStyleHorizontal"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -186,17 +186,17 @@
                     android:paddingTop="5dp"
                     android:paddingBottom="5dp"
                     android:layout_marginEnd="10dp"
-                    android:layout_toStartOf="@id/datasize"
+                    android:layout_toStartOf="@id/tv_data_size"
                     android:layout_alignParentStart="true"
                     android:layout_marginBottom="5dp"
-                    android:layout_below="@id/otasteps"
+                    android:layout_below="@id/tv_ota_step"
                     android:elevation="5dp"
                     android:max="100"
                     android:progressTint="@color/primary_color"
                     android:scaleY="5" />
 
                 <TextView
-                    android:id="@+id/datasize"
+                    android:id="@+id/tv_data_size"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
@@ -204,13 +204,13 @@
                     android:paddingEnd="10dp"
                     android:layout_marginEnd="10dp"
                     android:layout_gravity="center"
-                    android:layout_alignTop="@id/otaprogress"
-                    android:layout_alignBottom="@id/otaprogress"
-                    android:layout_below="@id/otasteps"
+                    android:layout_alignTop="@id/progress_bar_ota_progress"
+                    android:layout_alignBottom="@id/progress_bar_ota_progress"
+                    android:layout_below="@id/tv_ota_step"
                     android:elegantTextHeight="true"
                     android:fontFamily="sans-serif-medium"
                     android:gravity="center"
-                    android:text="0%" />
+                    android:text="@string/dialog_ota_process_zero_percent" />
             </RelativeLayout>
 
             <Chronometer
@@ -230,14 +230,14 @@
                 android:background="@color/gray_7" />
 
             <Button
-                android:id="@+id/otabutton"
+                android:id="@+id/btn_end_ota"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/black_alpha"
                 android:clickable="false"
                 android:elegantTextHeight="true"
                 android:fontFamily="sans-serif-medium"
-                android:text="End"
+                android:text="@string/dialog_ota_process_end"
                 android:textColor="@color/white"
                 android:textSize="14sp" />
         </LinearLayout>
