--- a/app/src/main/res/layout/fragment_scan.xml
+++ b/app/src/main/res/layout/fragment_scan.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
    <androidx.recyclerview.widget.RecyclerView
-       android:background="#ececec"
+       android:background="@color/gray_background_color"
        android:id="@+id/rv_scan"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
