--- a/app/src/main/res/layout/item_network.xml
+++ b/app/src/main/res/layout/item_network.xml
@@ -24,7 +24,7 @@
                 android:layout_height="40dp"
                 android:layout_gravity="center"
                 android:layout_weight="1"
-                android:src="@drawable/icon_network" />
+                android:src="@drawable/img_network" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -37,7 +37,7 @@
                     android:id="@+id/tv_network_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Demo Network"
+                    android:text="@string/fragment_node_info_network_name"
                     android:textColor="@color/primary_color"
                     android:textSize="18sp"
                     android:textStyle="bold" />
@@ -60,7 +60,7 @@
                         android:id="@+id/tv_network_groups_count"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
+                        android:layout_marginStart="10dp"
                         android:text="1 Group"
                         android:textColor="@color/black"
                         android:textSize="16sp" />
@@ -71,7 +71,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
-                    android:text="Net Key"
+                    android:text="@string/fragment_node_info_network_key"
                     android:textColor="@color/black"
                     android:textSize="16sp" />
             </LinearLayout>
