--- a/app/src/main/res/layout/item_group.xml
+++ b/app/src/main/res/layout/item_group.xml
@@ -3,12 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:card_view="http://schemas.android.com/tools"
     android:layout_marginBottom="10dp"
     android:orientation="horizontal"
-    android:layout_margin="10dp"
     android:weightSum="10">
 
     <androidx.cardview.widget.CardView
+        android:layout_margin="8dp"
+        card_view:cardElevation="8dp"
+        card_view:cardUseCompatPadding="true"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:cardCornerRadius="10dp">
