--- a/app/src/main/res/layout/item_node.xml
+++ b/app/src/main/res/layout/item_node.xml
@@ -3,12 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="10dp"
+    xmlns:card_view="http://schemas.android.com/tools"
     android:layout_marginBottom="10dp"
     android:orientation="horizontal"
     android:weightSum="10">
 
     <androidx.cardview.widget.CardView
+        android:layout_margin="8dp"
+        card_view:cardElevation="8dp"
+        card_view:cardUseCompatPadding="true"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:cardCornerRadius="10dp">
@@ -99,13 +102,13 @@
                 android:orientation="vertical">
 
                 <ImageView
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
                     android:background="@drawable/img_flame" />
 
                 <ImageView
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
                     android:layout_marginTop="6dp"
                     android:background="@drawable/img_group_2" />
             </LinearLayout>
