--- a/app/src/main/res/layout/item_scanned_device.xml
+++ b/app/src/main/res/layout/item_scanned_device.xml
@@ -3,11 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="10dp"
+    xmlns:card_view="http://schemas.android.com/tools"
     android:orientation="horizontal"
     android:weightSum="10">
 
     <androidx.cardview.widget.CardView
+        android:layout_margin="8dp"
+        card_view:cardElevation="8dp"
+        card_view:cardUseCompatPadding="true"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:cardCornerRadius="10dp">
