--- a/app/src/main/res/layout/fragment_node_config.xml
+++ b/app/src/main/res/layout/fragment_node_config.xml
@@ -4,13 +4,20 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Node Configuration"
+        android:textStyle="bold"
+        android:layout_margin="10dp"
+        android:textColor="@color/primary_color"
+        android:textSize="20sp" />
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="15dp">
 
         <TextView
-            android:textStyle="bold"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_toStartOf="@id/tv_low_power_support"
@@ -29,7 +36,6 @@
     </RelativeLayout>
 
     <Switch
-        android:textStyle="bold"
         android:id="@+id/sw_proxy"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -39,7 +45,6 @@
         android:textSize="16sp" />
 
     <Switch
-        android:textStyle="bold"
         android:id="@+id/sw_relay"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -49,7 +54,6 @@
         android:textSize="16sp" />
 
     <Switch
-        android:textStyle="bold"
         android:id="@+id/sw_friend"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -59,7 +63,6 @@
         android:textSize="16sp" />
 
     <Switch
-        android:textStyle="bold"
         android:id="@+id/sw_retransmission"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -75,7 +78,6 @@
         android:padding="15dp">
 
         <TextView
-            android:textStyle="bold"
 
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -98,7 +100,6 @@
         android:padding="15dp">
 
         <TextView
-            android:textStyle="bold"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/fragment_node_config_functionality"
