--- a/app/src/main/res/layout/fragment_network_list.xml
+++ b/app/src/main/res/layout/fragment_network_list.xml
@@ -1,10 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <androidx.recyclerview.widget.RecyclerView
-        android:background="@color/gray_background_color"
         android:id="@+id/rv_network_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:background="@color/gray_background_color" />
+
+    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+        android:textColor="@color/white"
+        android:id="@+id/fab_add_network"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:backgroundTint="@color/primary_color"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="16dp"
+        app:iconTint="@color/white"
+        app:iconSize="20sp"
+        android:textSize="12sp"
+        android:text="Add network"
+        app:icon="@drawable/ic_add" />
 </RelativeLayout>
