--- a/app/src/main/res/layout/dialog_ota_config.xml
+++ b/app/src/main/res/layout/dialog_ota_config.xml
@@ -25,14 +25,14 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/tv_device_name"
+            android:id="@+id/tv_node_name"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:paddingStart="20dp"
             android:paddingTop="5dp"
             android:paddingEnd="0dp"
             android:paddingBottom="15dp"
-            android:text="@string/dialog_ota_device_name"
+            android:text="@string/dialog_ota_node_name"
             android:textColor="@color/primary_color"
             android:textSize="14sp" />
     </LinearLayout>
@@ -56,6 +56,7 @@
 
 
         <Button
+            android:visibility="gone"
             android:id="@+id/btn_full_ota"
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -188,7 +189,7 @@
                     android:paddingBottom="10dp" />
 
                 <EditText
-                    android:id="@+id/edt_max_mtu_value"
+                    android:id="@+id/edt_mtu_value"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="bottom"
