--- a/app/src/main/res/layout/dialog_ota_config.xml
+++ b/app/src/main/res/layout/dialog_ota_config.xml
@@ -50,13 +50,13 @@
             android:layout_height="match_parent"
             android:layout_marginEnd="5dp"
             android:layout_weight="0.5"
+            android:padding="10dp"
             android:text="@string/dialog_ota_partial_ota"
             android:textColor="@color/white"
             android:textSize="14sp" />
 
 
         <Button
-            android:visibility="gone"
             android:id="@+id/btn_full_ota"
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -150,9 +150,40 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:layout_weight="1"
-                    android:textColor="@color/gray_7"
                     android:text="@string/dialog_ota_select_application_gbl_file"
-                    android:textAllCaps="false" />
+                    android:textAllCaps="false"
+                    android:textColor="@color/gray_7" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:visibility="gone"
+                android:id="@+id/layout_app_loader"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tv_apploader"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_margin="5dp"
+                    android:paddingTop="10dp"
+                    android:paddingBottom="10dp"
+                    android:text="@string/dialog_ota_apploader_colon"
+                    android:textColor="@color/primary_color" />
+
+                <Button
+                    android:id="@+id/btn_select_apploader_gbl_file"
+                    style="@style/Widget.AppCompat.Button.Borderless"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="1"
+                    android:text="@string/dialog_ota_select_apploader_gbl_file"
+                    android:textAllCaps="false"
+                    android:textColor="@color/gray_7" />
             </LinearLayout>
 
             <View
@@ -256,16 +287,36 @@
         </LinearLayout>
     </ScrollView>
 
-
-    <Button
-        android:id="@+id/btn_ota_proceed"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:clickable="false"
-        android:padding="10dp"
-        android:text="@string/dialog_ota"
-        android:textColor="@color/white"
-        android:textSize="14sp" />
+        android:layout_height="match_parent"
+        android:layout_weight="0"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btn_ota_cancel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginEnd="5dp"
+            android:padding="10dp"
+            android:text="@string/dialog_cancel_ota"
+            android:textColor="@color/white"
+            android:textSize="14sp" />
+
+
+        <Button
+            android:id="@+id/btn_ota_proceed"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:clickable="false"
+            android:padding="10dp"
+            android:text="@string/dialog_start_ota"
+            android:textColor="@color/white"
+            android:textSize="14sp" />
+    </LinearLayout>
+
+
 </LinearLayout>
 
